--- a/style/share.css
+++ b/style/share.css
@@ -495,6 +495,8 @@ button.danger:hover {
 
 .file-group-header .icon {
     font-size: 20px;
+    max-width: 1ch;
+    overflow: hidden;
 }
 
 .file-group-content.color-red,    .file-group-icon.color-red    { color: var(--quote-red)    !important; border-left-color: var(--quote-red)    !important; }
